--- a/index.html
+++ b/index.html
@@ -51,43 +51,51 @@
         <p class="a-small-text">A Collection of Hilarious <br> Videos to Brighten Your Day</p>
        </div>
        <div class="online-game-img-container">
-        <div class="online-game-img-content">
+        <div class="online-game-img-content image-container">
            <div class="container">
             <img class="online-game-img image" src="./images/Rectangle 4.png" alt="">
            </div>
             <p class="online-game-description">No Download. No Installs. Play <br> games Instantly on Gamer.</p>
-            <div class="middle">
-                <div class="text">Watch Now</div>
-              </div>
+            <div class="icon-container">
+              <!-- Your icon or image for center display -->
+              <img src="./images/play-button 1.png" alt="Icon">
+              <p class="watch-text">Watch Now</p>
+            </div>
        </div>
-        <div class="online-game-img-content">
+        <div class="online-game-img-content image-container">
          <div class="container">
             <img class="online-game-img image" src="./images/Rectangle 5.png" alt="">
          </div>
             <p class="online-game-description">Did you score? #unblockedgames <br>
                  #school</p>
-                 <div class="middle">
-                    <div class="text">Watch Now</div>
-                  </div>
+                 <div class="icon-container">
+                  <!-- Your icon or image for center display -->
+                  <img src="./images/play-button 1.png" alt="Icon">
+                  <p class="watch-text">Watch Now</p>
+                </div>
                  
        </div>
-        <div class="online-game-img-content">
+        <div class="online-game-img-content image-container">
             <div class="container">
                 <img class="online-game-img image "  src="./images/Rectangle 7.png" alt="">
             </div>
             <p class="online-game-description">Breaking game records <br> like OG</p>
-            <div class="middle">
-                <div class="text">Watch Now</div>
-              </div>
-       </div>
-        <div class="online-game-img-content">
+            <div class="icon-container">
+              <!-- Your icon or image for center display -->
+              <img src="./images/play-button 1.png" alt="Icon">
+              <p class="watch-text">Watch Now</p>
+            </div>
+           </div>
+        <div class="online-game-img-content image-container">
             <div class="container">
                 <img class="online-game-img image"  src="./images/Rectangle 6.png" alt="">
             </div>
             <p class="online-game-description">Busted gaming on school laptop, <br> but you are still lit.</p>
-            <div class="middle">
-                <div class="text">Watch Now</div>
-              </div>
+            <div class="icon-container">
+              <!-- Your icon or image for center display -->
+              <img src="./images/play-button 1.png" alt="Icon">
+              <p class="watch-text">Watch Now</p>
+            </div>
        </div>
     </section>
 
